client/src/App.css
/* ... */
.add-api-hover:hover {
  border: 3px solid lime;
}

.book-memory {
  display: flex;
  justify-content: space-around;
}
.extra-opacity {
  position: absolute;
  bottom: -500px;
  height: 500px;
  width: 100vw;
  background-color: white;
}
.theme {
  position: absolute;
  top: 60px;
  opacity: .2;
  cursor: pointer;
}

.n-v {
  display: none;
}

.new-version {
  display: flex;
  flex-direction: column;
  text-align: center;
  border-bottom: 4px solid black;
  background-color: rgb(236, 255, 236);
  animation: version-update 1s ease-in-out 1 normal; 
  position: absolute;
  width: 100vw;
  z-index: 5;
  cursor: pointer;
}

.new-version h4 {
  margin: 0px;
}

.new-version-d {
  animation: version-update-d 1s ease-in-out 1 normal; 
}

.loading {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(212, 195, 195);
  opacity: .9;
  width: 100%;
  height: 100%;
}

.loader {
  border: 5px solid #645959; /* Light grey */
  border-top: 10px solid rgb(70, 69, 69); /* Blue */
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin .5s linear infinite;
}

.m-stat {
  background-color: rgb(197, 167, 167);
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;

  width: 100vw;
  overflow-y: scroll;
}

.m-stat img {
  height: 70px;

}

.m-stat h6 {
  position: absolute;
  top: -30px;
}

.m-stat span:nth-child(1) {
  font-size: 18pt;
  width: 25px;
}

.p-value {
  position: absolute;
  margin-top: 85px;
  font-size: 10pt;
  height: inherit;
  width: 100px;
  color: black;
  text-align: center;
  line-height: 12px;
}

.m-stat li {
  display: flex;
  width: initial;
}

.m-stat ul {
  gap: 20px;
  padding: 0;
  width: initial;
}

.nav-block {
  display: none;
  position: fixed;
  background-color: black;
  z-index: 3;
  opacity: .5;
  height: 100%;
  width: 100vw;
  border: 1px solid black;
}

/* Keyframe Animations */

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}


@keyframes version-update-d {
  0% {
    
    height: 120px;
  }
  50% {
    text-indent: -9999px;
    height: 50px;
  }
  100% {
    text-indent: -9999px;
    height: 0px;
  }
}

@keyframes version-update {
  0% {
    text-indent: -9999px;
    opacity: .0001;
    height: 0px;
  }
  50% {
    opacity: .1;
    height: 50px;
  }
  100% {
    text-indent: 0px;
    opacity: .5;
    height: 120px;
  }
}


@keyframes profile {
  0% {
    opacity: .0001;
    visibility: visible;
  }
  50% {
    opacity: .1;
  }
  100% {
    opacity: .5;
  }
}
@keyframes myframes {
  0% {
    opacity: .1;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: .5;
  }
}
@keyframes dissappear {
  0% {
    opacity: .5;
  }
  50% {
    opacity: .1;
  }
  100% {
    opacity: .0001;
    visibility: hidden;
  }
}
@keyframes appear {
  0% {
    opacity: .0001;
    visibility: visible;
  }
  50% {
    opacity: .1;
  }
  100% {
    opacity: .5;
  }
}
@keyframes login {
  0% {
    opacity: .0001;
    visibility: visible;
    margin-top: -20px;
  }
  50% {
    opacity: 1;
  }
  100% {
    
  }
}
@keyframes dot-barrier {
  0% {
    color: seashell;
  }
  50% {
    color: grey;
  }
  100% {
    color: black;
  }
}
@keyframes bookanimhover {
  0% {
    border-left: 0px solid black;
  }
  100% {
    border-left: 5px solid black;
  }
}
@keyframes imganimhover {
  0% {
    border-left: 0px solid black;
  }
  100% {
    border-left: 15px solid black;
  }
}
@keyframes bookanimactive {
  0% {
    border-left: 5px solid black;
  }
  100% {
    border-left: 20px solid black;
  }
}

@media (max-width: 1200px) {
  #userInfo h1 {
    text-align: right;
  }
}

/* Media Quieries / Mobile Support */

@media (min-width: 931px) {
  #userInfo ul {
    position: absolute;
    top: 135px;
  }
}
/* ... */

